# wqxtools

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  LICENSE  Makefile.toml  README.md  TODO  TODO.md  gvb+.asm  gvb+.tmp  machines.yaml
api_cpp_binding/: Cargo.toml  (+2 more)
gui-wx/: .gitignore  CMakeLists.txt
gui-wx/include/: api.h
gui-wx/resources/: wqxtools.xrc
gui-wx/resources/help/: help.hhc  help.hhp  index.html  keycodes.html
gui-wx/resources/help/gvbsim/: extension.html  index.html  semantics.html
gui-wx/src/: binary_data.cpp  binary_data.h  icon_bundle_handler.cpp  icon_bundle_handler.h  main.cpp  main_window.cpp  main_window.h  new_version_dialog.cpp  new_version_dialog.h  notification.cpp  notification.h  utils.cpp  utils.h
gui-wx/src/xrc/: binary_data_handler.cpp  binary_data_handler.h  icon_bundle_handler.cpp  icon_bundle_handler.h
gvb_interp/: Cargo.toml  Makefile.toml  build.rs  config.yaml  machines.yaml  shit.diff
gvb_interp/data/: CP936.TXT  keyword.txt  machine_props.json  鹿逐中原.bas
gvb_interp/src/: ast.rs  compiler.rs  device.rs  diagnostic.rs  document.rs  lib.rs  line_parser.rs  machine.rs  parser.rs  util.rs  vm.rs
gvb_interp/src/ast/: expr.rs  label.rs  line.rs  node.rs  stmt.rs  token.rs
gvb_interp/src/device/: default.rs
gvb_interp/src/device/snapshots/: gvb_interp__device__default__tests__clear_following_text_in_text_mode.snap  gvb_interp__device__default__tests__cursor_full-2.snap  gvb_interp__device__default__tests__cursor_full.snap  gvb_interp__device__default__tests__cursor_full_at_latter_half_of_chinese_character.snap  gvb_interp__device__default__tests__cursor_half.snap  gvb_interp__device__default__tests__draw_box.snap  gvb_interp__device__default__tests__draw_circle_filled_copy.snap  gvb_interp__device__default__tests__draw_circle_filled_not.snap  gvb_interp__device__default__tests__draw_circle_negative_coord.snap  gvb_interp__device__default__tests__draw_circle_unfilled_copy.snap  gvb_interp__device__default__tests__draw_circle_unfilled_not.snap  (+13 more)
gvb_interp/src/document/: binary.rs  emoji.rs
gvb_interp/src/machine/: emoji.rs
gvb_interp/src/parser/: symbol.rs
gvb_interp/src/snapshots/: gvb_interp__compiler__tests__assignment.snap  gvb_interp__compiler__tests__data.snap  gvb_interp__compiler__tests__dim.snap  gvb_interp__compiler__tests__draw.snap  gvb_interp__compiler__tests__file__binary.snap  gvb_interp__compiler__tests__file__close.snap  gvb_interp__compiler__tests__file__debug.snap  gvb_interp__compiler__tests__file__field.snap  gvb_interp__compiler__tests__file__fputc.snap  gvb_interp__compiler__tests__file__fread.snap  gvb_interp__compiler__tests__file__fseek.snap  gvb_interp__compiler__tests__file__fwrite.snap  gvb_interp__compiler__tests__file__get_put.snap  gvb_interp__compiler__tests__file__input.snap  gvb_interp__compiler__tests__file__open.snap  gvb_interp__compiler__tests__file__write.snap  gvb_interp__compiler__tests__fn.snap  gvb_interp__compiler__tests__fn.snap.new  gvb_interp__compiler__tests__fn_body.snap  gvb_interp__compiler__tests__fn_body_type_mismatch.snap  gvb_interp__compiler__tests__for_loop.snap  gvb_interp__compiler__tests__for_loop_to_sleep.snap  gvb_interp__compiler__tests__if.snap  gvb_interp__compiler__tests__if.snap.new  gvb_interp__compiler__tests__input.snap  gvb_interp__compiler__tests__jump.snap  gvb_interp__compiler__tests__locate.snap  gvb_interp__compiler__tests__nullary_statement.snap  gvb_interp__compiler__tests__ppc.snap  gvb_interp__compiler__tests__ppc.snap.new  gvb_interp__compiler__tests__print.snap  gvb_interp__compiler__tests__r#fn.snap  gvb_interp__compiler__tests__r#if.snap  gvb_interp__compiler__tests__set.snap  gvb_interp__compiler__tests__sleep.snap  gvb_interp__compiler__tests__swap.snap  gvb_interp__compiler__tests__unary_statement.snap  gvb_interp__compiler__tests__while_loop.snap  gvb_interp__compiler__tests__write.snap  gvb_interp__parser__lex_tests__real_world_example.snap  (+169 more)
gvb_interp/src/util/: ascii_ext.rs  mbf5.rs  utf16str_ext.rs  utf16string.rs
gvb_interp/src/vm/: codegen.rs  device.rs  file.rs  instruction.rs  memory.rs  type.rs
gvb_interp/styles/: dracula.xml  light.xml
(+327 files in other folders)
