[package]
name = "gvb_interp"
version = "0.1.0"
authors = ["amlo <xplzjwz@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bstr = "0.2.17"
emulator_6502 = { version = "1.1.0", features = ["implementation_transparency"] }
fasthash = "0.4.0"
id-arena = "2.2.1"
nanorand = "0.6.1"
num-derive = "0.3.3"
num-traits = "0.2.14"
phf = { version = "0.10.1", features = ["macros"] }
rand = "0.8.4"
smallvec = "1.7.0"
string-interner = "0.14.0"
yaml-rust = "0.4.5"
util = { path = "../util" }
intmap = "0.7.1"
chrono = "0.4.19"

[dev-dependencies]
insta = "1.10.0"
pretty_assertions = "1.0.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"

[features]
